--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>#RSE18 - "YOU HAVE 0 CREDIT – PLEASE INSERT -C-O-I-N- FILE": The Citation File Format</title>
+		<title>#RSE18 - Surviving the vacuum: A strategy for sustaining software in the absence of RSE teams</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/beige.css">
